--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>WebChat</title>
+    <title>Mario WebChat</title>
 </head>
 
 <body>
-    <h1>Hola</h1>
+    <header>
+        <h1>Mario Chat</h1>
+    </header>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/script.js"></script>
 </body>
