--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/chat.css">
     <title>Mario WebChat</title>
 </head>
 
@@ -13,6 +14,13 @@
     <header>
         <h1>Mario Chat</h1>
     </header>
+    <main>
+        <div id="all-messages"></div>
+        <div class="send-message">
+            <input type="text" name="" id="message">
+            <button type="button" id="send-message" class="btn secondary">Send</button>
+        </div>
+    </main>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/script.js"></script>
 </body>
